refactor: polishing projects section

--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -36,14 +36,14 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
   <Canvas client:idle />
 
   <main
-    class="mt-32 animate-fade-in space-y-48 opacity-0 animate-delay-300 animate-duration-300"
+    class="mt-32 animate-fade-in space-y-36 opacity-0 animate-delay-300 animate-duration-300 lg:space-y-48"
   >
     <Hero />
 
     <Work />
     <Projects />
 
-    <!-- <Skills />
+    <!-- <Skills /> 
     <About /> -->
   </main>
 
