--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -1,16 +1,42 @@
 ---
 import { ObservedSection } from "@app/layouts";
-import { getTranslations } from "@modules/i18n";
+import { getTranslations, getLocaleRoute } from "@modules/i18n";
 
-import { projects } from "./lib/data";
+import { projects, current } from "./lib/data";
 import ProjectList from "./components/project-list.astro";
+import ProjectCard from "./components/project-card.astro";
+import Button3D from "@app/components/button-3d.astro";
+import { Link } from "@app/components/base";
+import { Icon } from "astro-icon/components";
 
 const { locale } = Astro.locals;
 const translations = getTranslations(locale);
 const t = translations.sections.projects;
 
 const featuredProjects = projects.filter((project) => project.featured);
+const currentDescription = current.description(locale);
 ---
+
+<script>
+  const currentProject = document.querySelector("div[data-current-project]")!;
+  const currentProjectButton = document.querySelector(
+    "button[data-current-project-button]",
+  )!;
+
+  const mask = currentProject.querySelector("div[data-mask]")!;
+  currentProjectButton.addEventListener(
+    "click",
+    () => {
+      currentProject.style.visibility = "visible";
+      currentProject.style.gridTemplateRows = "1fr";
+
+      setTimeout(() => {
+        mask.classList.add("hide");
+      }, 150);
+    },
+    { once: true },
+  );
+</script>
 
 <ObservedSection
   id={t.id}
@@ -19,7 +45,88 @@ const featuredProjects = projects.filter((project) => project.featured);
   order={2}
 >
   <ProjectList
+    class="space-y-12 py-12 sm:mx-4 lg:space-y-24"
     projects={featuredProjects}
     {locale}
   />
+
+  <div class="mx-4 mb-6 mt-8 sm:mx-12">
+    <p class="text-pretty text-right text-lg font-medium sm:text-xl xl:mr-10">
+      <span class="text-foreground/80">See more of my projects in</span>
+      <Link
+        class="group inline-block w-fit font-semibold text-primary"
+        href={getLocaleRoute(locale, "archive")}
+        label="Project Archive"
+      >
+        <span class="underline underline-offset-2">the archive</span>
+        <Icon
+          name="lucide:arrow-right"
+          class="ml-0.5 inline-block size-[1em] text-primary transition-transform group-hover:translate-x-3"
+        />
+      </Link>
+    </p>
+
+    <!-- <Button3D
+      data-current-project-button
+      class="mx-auto my-2 w-fit !px-8"
+    >
+      What I am currently working on?
+    </Button3D> -->
+  </div>
+
+  <div
+    data-current-project
+    class="grid *:overflow-hidden"
+  >
+    <ProjectCard
+      name={current.name(locale)}
+      headline={current.headline(locale)}
+      relatedSkills={current.relatedSkills}
+      preview={projects[0].preview}
+      class="relative sm:mx-4"
+    >
+      <Fragment slot="description">
+        {
+          currentDescription.map((description) => (
+            <p
+              data-project-description
+              class="text-pretty pr-0 text-sm text-foreground/70 md:text-base xl:pr-16"
+              set:html={description}
+            />
+          ))
+        }
+      </Fragment>
+
+      <div
+        data-mask
+        aria-hidden="true"
+        class="pointer-events-none absolute inset-0 size-full bg-background"
+      >
+      </div>
+    </ProjectCard>
+  </div>
 </ObservedSection>
+
+<style>
+  [data-current-project] {
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.3s ease;
+
+    /* visibility: hidden; */
+  }
+
+  [data-mask] {
+    mask-image: linear-gradient(
+      to bottom,
+      black 0%,
+      transparent 10%,
+      transparent 90%,
+      black 100%
+    );
+  }
+
+  [data-mask].hide {
+    @apply animate-fade-out;
+    animation-duration: 0.3s;
+  }
+</style>
