--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -43,8 +43,8 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
     <Work />
     <Projects />
 
-    <!-- <Skills /> 
-    <About /> -->
+    <!-- <Skills />  -->
+    <About />
   </main>
 
   <SkillSprites />
