--- a/source/sections/projects/components/project-card.astro
+++ b/source/sections/projects/components/project-card.astro
@@ -32,7 +32,7 @@ const { class: clazz, ...articleProps } = props;
 <article
   data-project={name}
   class={cn(
-    "relative flex flex-col-reverse items-center xl:grid xl:grid-cols-12 xl:grid-rows-1",
+    "relative flex flex-col-reverse bg-background items-center xl:grid xl:grid-cols-12 xl:grid-rows-1",
     clazz,
   )}
   {...articleProps}
