--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -1,10 +1,13 @@
 ---
 import type { GetStaticPaths } from "astro";
 
-import Page from "@app/layouts/page.astro";
-import { getLocalizedStaticPaths } from "@modules/i18n/lib/utils/locales";
+import { Page } from "@app/layouts";
+import { getLocalizedStaticPaths } from "@modules/i18n";
 
 import { Canvas } from "@components/experience/canvas";
+import ParticlesCanvas from "@components/particles/particle-canvas.astro";
+
+import NoScript from "@components/noscript.astro";
 
 import Header from "@app/layouts/header.astro";
 import Work from "@app/sections/work/content.astro";
@@ -15,6 +18,7 @@ import About from "@app/sections/about/content.astro";
 import { SkillSprites } from "@app/sections/skills";
 import Footer from "@app/layouts/footer.astro";
 import Hero from "@app/sections/hero/content.astro";
+import { Button } from "@app/components/ui/react";
 
 export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 ---
@@ -22,24 +26,34 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 <Fragment slot="head">
   <script>
     import { initLenis } from "@lib/client/scroll";
+    import tippy from "tippy.js";
 
-    // Enable smooth-scrolling.
+    // Enable smooth-scrolling and hydrate tippy tooltips.
     initLenis();
+    tippy("[data-tippy-content]", {
+      placement: "right",
+      offset: [0, 16],
+      animation: "scale",
+      inertia: true,
+    });
   </script>
 </Fragment>
 
-<Page>
+<Page
+  bodyClass="relative"
+  withScrollToTop
+>
+  <Canvas client:idle />
+
   <Header
     class="animate-fade-down overflow-x-auto animate-delay-0 animate-duration-500"
   />
 
-  <Canvas client:idle />
-
   <main
-    class="mt-32 animate-fade-in space-y-36 opacity-0 animate-delay-300 animate-duration-300 lg:space-y-48"
+    vaul-drawer-wrapper
+    class="animate-fade-in space-y-36 pt-32 opacity-0 animate-delay-300 animate-duration-300 lg:space-y-48"
   >
     <Hero />
-
     <Work />
     <Projects />
 
@@ -48,6 +62,59 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
   </main>
 
   <SkillSprites />
-
   <Footer />
+
+  <div
+    class="pointer-events-none absolute inset-0 -z-50 m-auto size-full"
+    data-pattern
+  >
+  </div>
+
+  <div
+    data-particles
+    class="pointer-events-none absolute inset-0 top-0 -z-50 mx-auto w-full max-w-screen-lg"
+  >
+    <ParticlesCanvas quantity={80} />
+  </div>
+
+  <NoScript />
 </Page>
+
+<style>
+  [data-pattern] {
+    /* Pattern from: https://github.com/thevrus/vrus.vercel.app */
+    background-image: url(/pattern.svg);
+    background-position-y: top;
+    background-position-x: 40%;
+
+    background-repeat: no-repeat;
+    background-blend-mode: difference;
+    overflow-y: visible;
+    overflow-x: clip;
+
+    opacity: 0.6;
+  }
+
+  [data-particles] {
+    height: 60vh;
+    height: 60lvh;
+  }
+
+  @media (min-width: 540px) {
+    [data-particles] {
+      height: 50vh;
+      height: 50lvh;
+    }
+  }
+
+  @media screen(lg) {
+    [data-pattern] {
+      background-position-x: 50%;
+    }
+
+    [data-particles] {
+      height: 40vh;
+      height: 40lvh;
+    }
+  }
+</style>
